--- a/index.css
+++ b/index.css
@@ -55,6 +55,13 @@ background-image:  url(sparta.webp);
 
 
 }
+
+#toplistcz1839526 img {
+  width: 90px;
+  height: 130px; 
+
+}
+
 .s12345{ padding: 15px;box-shadow: black 5px 5px 10px;width: 100%;margin: 4% auto; height: 100%;
 background-image:  url(slavia2.jpg); 
   background-repeat: no-repeat; 
